--- a/index.html
+++ b/index.html
@@ -8,8 +8,21 @@
     <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-
-    <h1>miau</h1>
-    
+    <div class="app-wrap">
+        <header>
+            <input type="text" autocomplete="off" class="search-box" />
+        </header>
+        <main>
+            <section class="location">
+                <div class="city">Northampton, GB</div>
+                <div class="date">Thursday 10 January 2020</div>
+            </section>
+            <div class="current">
+                <div class="temp">15<span>°</span></div>
+                <div class="weather">Sunny</div>
+                <div class="hi-low">13°c / 16°c</div>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
