--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="app-wrap">
         <header>
-            <input type="text" autocomplete="off" class="search-box" />
+            <input type="text" placeholder="Search for a city...." autocomplete="off" class="search-box" />
         </header>
         <main>
             <section class="location">
@@ -18,11 +18,12 @@
                 <div class="date">Thursday 10 January 2020</div>
             </section>
             <div class="current">
-                <div class="temp">15<span>°</span></div>
+                <div class="temp">75<span>°</span><span>F</span></div>
                 <div class="weather">Sunny</div>
                 <div class="hi-low">13°c / 16°c</div>
             </div>
         </main>
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
