--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
             </div>
                 <div class="subsol">
-                    <h6>© FineasBerindei.com, Inc. All rights reserved. <a style="text-decoration: none;" href="https://www.linkedin.com/in/fineas-berindei-79b722142/">Linked in.</a></h6>
+                    <h6>© FineasBerindei.com, Inc. All rights reserved. <a style="text-decoration: none;" href="https://www.linkedin.com/in/fineas-berindei-79b722142/">Linked in. <i class="fab fa-linkedin"></i></a></h6>
                 </div>
         </main>
     </div>
