--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <input type="text" placeholder="Search for location" autocomplete="off" class="search-box" />
             <button onclick="search()" id="search"><i class="fas fa-search"></i></button>
             <section class="the_switch">
-          
+            <h1>hello bitches</h1>
             </section>
         </header>
         <main>
