--- a/index.html
+++ b/index.html
@@ -14,8 +14,6 @@
         <header>
             <input type="text" placeholder="Search for location" autocomplete="off" class="search-box" />
             <button onclick="search()" id="search"><i class="fas fa-search"></i></button>
-            <section class="the_switch">
-            </section>
         </header>
         <main>
                 <section>
@@ -31,7 +29,7 @@
                     <div class="temp">75<span>°</span><span>F</span></div>
                 </div>
             </div>
-                <div class="subsol">
+                <div style="margin-top: 700px;">
                     <h6>© FineasBerindei.com, Inc. All rights reserved. <a style="text-decoration: none;" href="https://www.linkedin.com/in/fineas-berindei-79b722142/">Linked in. <i class="fab fa-linkedin"></i></a></h6>
                 </div>
         </main>
