--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <div class="temp">75<span>°</span><span>F</span></div>
                 </div>
             </div>
-                <div style="margin-top: 700px;">
+                <div class="subsol">
                     <h6>© FineasBerindei.com, Inc. All rights reserved. <a style="text-decoration: none;" href="https://www.linkedin.com/in/fineas-berindei-79b722142/">Linked in. <i class="fab fa-linkedin"></i></a></h6>
                 </div>
         </main>
